# qube-apps

./: .gitignore  README.md  build_deb.sh  build_rpm.sh  pyproject.toml  qube-apps  setup.py  stdeb.cfg
share/: qube-apps.desktop
